# ikaros

./: README.md
Source/UserModules/: CMakeLists.txt
Source/UserModules/BicSpli/: BicSpli.cc  BicSpli.h  BicSpli.ikc  CMakeLists.txt  interp.h  interp_h.h
Source/UserModules/CropMod/: CMakeLists.txt  CropMod.cc  CropMod.h  CropMod.ikc
Source/UserModules/EdgeMod/: CMakeLists.txt  EdgeMod.cc  EdgeMod.h  EdgeMod.ikc
Source/UserModules/ImageTrimmer/: CMakeLists.txt  ImageTrimmer.cc  ImageTrimmer.h  ImageTrimmer.ikc
Source/UserModules/MachineSpecs/: CMakeLists.txt  MachineSpecs.cc  MachineSpecs.h  MachineSpecs.ikc
Source/UserModules/MoCoT/: CMakeLists.txt  MoCoT.cc  MoCoT.h  MoCoT.ikc
Source/UserModules/ServoInstructor/: CMakeLists.txt  ServoInstructor.cc  ServoInstructor.h  ServoInstructor.ikc
Source/UserModules/ShapeDetector/: CMakeLists.txt  ShapeDetector.cc  ShapeDetector.h  ShapeDetector.ikc
Source/UserModules/ShapeMod/: CMakeLists.txt  ShapeMod.cc  ShapeMod.h  ShapeMod.ikc
Source/UserModules/SmMo/: CMakeLists.txt  SmMo.cc  SmMo.h  SmMo.ikc
Source/UserModules/Spliner/: CMakeLists.txt  Spliner.cc  Spliner.h  Spliner.ikc
